@@ -1,3 +1,7 @@
+2008-09-26  Curtis Gedak  <gedakc@gmail.com>
+
+	* autogen.sh: Added check for gnome-doc-utils.make
+
 2008-09-25  Curtis Gedak  <gedakc@gmail.com>
 
 	* src/GParted_Core.cc,
